--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h1>My BUD</h1>
     <form action="javascript:void(0);" onsubmit="searchbar()"> 
       <div>Search for a name of bud:</div>
-      <input type="text" id="search" placeholder="Search..." required>
+      <input type="text" id="search" placeholder="Search" required>
       <input type="submit" value="Search">
       <input type="submit" value="Reset" onclick="location.reload()">
     </form>
