--- a/index.html
+++ b/index.html
@@ -9,14 +9,45 @@
     <title>GUNJA</title>
 </head>
 <body>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-success">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#">MyBud</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/add.html">Add</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Dropdown
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </li>
+        
+        </ul>
+        <form class="d-flex" action="javascript:void(0);" onsubmit="searchbar()"> 
+       
+          <input type="text" id="search" placeholder="Search for bud" required>
+          <input type="submit" value="Search">
+          <input type="submit" value="Reset" onclick="location.reload()">
+        </form>
+      </div>
+    </div>
+  </nav>
   
-    <h1>My BUD</h1>
-    <form action="javascript:void(0);" onsubmit="searchbar()"> 
-      <div>Search for a name of bud:</div>
-      <input type="text" id="search" placeholder="Search" required>
-      <input type="submit" value="Search">
-      <input type="submit" value="Reset" onclick="location.reload()">
-    </form>
+   
     <p></p>
     <div><label for="">Add a new bud</label></div>
     <form action="javascript:void(0);" onsubmit="addWeed()"> 
