made edit a modal

--- a/index.html
+++ b/index.html
@@ -49,9 +49,7 @@
   </nav>
   
    
-    <p></p>
  
-  
     <div id="editForm">
       <h3>Edit Bud</h3>
       <form action="javascript:void(0);" id="saveEdit">
@@ -61,10 +59,10 @@
         <input type="submit" value="Edit" /> <a onclick="closeInput()" aria-label="Close">&#10006;</a>
       </form>
     </div>
-  <!-- for adding -->
+
    
 
-<!-- The Modal -->
+<!-- modal for  adding -->
 <div id="myModal" class="modal">
 
   <!-- Modal content -->
