--- a/index.html
+++ b/index.html
@@ -51,15 +51,18 @@
    
  
     <div id="editForm">
-      <h3>Edit Bud</h3>
-      <form action="javascript:void(0);" id="saveEdit">
-        <input type="text" id="edit-weed">
-        <input type="text" id="edit-strain">
-        <input type="number" id="edit-price">
-        <input type="submit" value="Edit" /> <a onclick="closeInput()" aria-label="Close">&#10006;</a>
-      </form>
-    </div>
-
+      <div id="editing">
+        <h3>Edit Bud</h3>
+        <form action="javascript:void(0);" id="saveEdit">
+          <input type="text" id="edit-weed">
+          <input type="text" id="edit-strain">
+          <input type="number" id="edit-price">
+          <input type="submit" value="Edit" /> <br><br>
+          <a onclick="closeInput()" aria-label="Close">&#10006;</a>
+        </form>
+      </div>
+      </div>
+    
    
 
 <!-- modal for  adding -->
