--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
   </div>
 
 </div>
-    <p id="counter"></p>
+    <p class="glow" id="counter"></p>
 
   <div id="stock">
     <table class="table">
