added some color to table

--- a/index.html
+++ b/index.html
@@ -95,11 +95,11 @@
   <div id="stock">
     <table class="table">
       <tr>
-        <th>Order</th>
-        <th id="name" >Name</th>
-        <th>Strain</th>
-        <th >Price</th>
-        <th colspan="2">OPPS</th>
+        <th class="thead">Order</th>
+        <th class="thead" id="name" >Name</th>
+        <th class="thead">Strain</th>
+        <th  class="thead">Price</th>
+        <th class="thead" colspan="2">OPPS</th>
       </tr>
         <tbody id="weeds">
         </tbody>
